--- a/www-pages/sites/statistic.html
+++ b/www-pages/sites/statistic.html
@@ -50,7 +50,8 @@
 						<th>LAST CLEAN:</th><td>${CLREC:LAST_CLEAN.DateTime}</td>
 					</tr>
 					<tr>
-						<th>TOTAL CLEANTIME:</th><td colspan="3">${CLREC:TOTAL_CLEANTIME.DateTime}</td>
+						<th>TOTAL CLEANTIME:</th><td>${CLREC:TOTAL_CLEANTIME.DateTime}</td>
+						<th>MEMORY USEAGE:</th><td>${LGSRV:MEMUSAGE}</td>
 					</tr>
 				</table>
 				<br /><br />
