--- a/www-pages/status.html
+++ b/www-pages/status.html
@@ -10,6 +10,7 @@
 <b>Cpu-User</b>: <cpuuser>${CPU:USER}</cpuuser> <br>
 <b>Cpu-Sys</b>: <cpusys>${CPU:SYS}</cpusys> <br>
 <b>Cpu-Nice</b>: <cpunice>${CPU:NICE}</cpunice> <br>
+<b>Mem-Usage</b>: <memusage>${LGSRV:MEMUSAGE}</memusage> <br>
 <b>Turbo</b>: <turbo>${JSON:TURBO}</turbo> <br>
 <b>Repeat</b>: <repeat>${JSON:REPEAT}</repeat> <br>
 <b>Mode</b>: <mode>${JSON:MODE}</mode> <br>
