--- a/www-pages/sites/statistic.html
+++ b/www-pages/sites/statistic.html
@@ -53,6 +53,10 @@
 						<th>TOTAL CLEANTIME:</th><td>${CLREC:TOTAL_CLEANTIME.DateTime}</td>
 						<th>MEMORY USEAGE:</th><td>${LGSRV:MEMUSAGE}</td>
 					</tr>
+					<tr>
+						<th>JSON CONNTIME:</th><td>${JSON:CONNTIME}</td>
+						<th>LGSRV PID:</th><td>${LGSRV:PID}</td>
+					</tr>
 				</table>
 				<br /><br />
 				<table cellpadding="0" cellspacing="0" width="100%" class="info" border="0">
