[www] add joy control button

--- a/www-pages/index.html
+++ b/www-pages/index.html
@@ -50,6 +50,21 @@
 						<td><input type="button" id="turbo" value="Turbo"/></td>
 						<td><input type="button" id="repeat" value="Repeat"/></td>
 					</tr>
+					<tr>
+						<td><input type="button" id="forward_left" value="Forward_Left"/></td>
+						<td><input type="button" id="forward" value="Forward"/></td>
+						<td><input type="button" id="forward_right" value="Forward_Right"/></td>
+					</tr>
+					<tr>
+						<td><input type="button" id="left" value="Left"/></td>
+						<td><input type="button" id="release" value="Release"/></td>
+						<td><input type="button" id="right" value="Right"/></td>
+					</tr>
+					<tr>
+						<td><input type="button" id="backward_left" value="Backward_Left"/></td>
+						<td><input type="button" id="backward" value="Backward"/></td>
+						<td><input type="button" id="backward_right" value="Backward_Right"/></td>
+					</tr>
 				</table>
 			</div>
 			<div class="clear"></div>
